--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,29 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-</head>
-<body>
+<%- include("header") -%>
 
+<div class="box" id="heading">
+    <h1> <%= listTitle %> </h1>
+</div>
 
-<h1> <%= kindOfDay %> </h1>
-
-<ul>
+<div class="box">
     <% for (var i=0; i<newListItems.length; i++) { %>
-        <li> <%= newListItems[i] %> </li>
+        <div class="item">
+            <input type="checkbox">
+            <p> <%= newListItems[i] %> </p>
+        </div>
+    
     <% } %>
-</ul>
 
 
-<form action="/" class="" method="POST">
-    <input type="text" name="newItem">
-    <button type="submit" name="button">Add</button>
-</form>
+    <form class="item" action="/" class="" method="POST">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+        <button type="submit" name="list" value=<%= listTitle  %>>+</button>
+    </form>
+</div>
 
 
 
-</body>
-</html>
+<%- include("header") -%>
